<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="150dp"
              android:layout_height="match_parent">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:id="@+id/tv_layout_names">
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_drag_handle_white_24dp"
                android:id="@+id/ib_drag_name"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:layout_gravity="center_vertical"
                android:padding="4dp"/>
        <TextView
                android:text="Employee\nName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvEmployeeName"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:fontFamily="sans-serif-smallcaps"
                android:padding="4dp"/>
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_expand_more_white_24dp"
                android:id="@+id/ib_expand_times"
                style="@style/Widget.AppCompat.ImageButton"
                android:background="@android:color/transparent"
                android:cropToPadding="false"
                android:adjustViewBounds="false"
                android:layout_gravity="center_vertical"
                android:padding="4dp"/>
    </LinearLayout>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_times"
                android:visibility="visible">
            <TextView
                    android:text="@string/time_700"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv700"
                    android:textAlignment="center"
                    android:padding="4dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"/>
            <TextView
                    android:text="7:15AM"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv715"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"/>
            <TextView
                    android:text="@string/time_730"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv730"
                    android:textAlignment="center"
                    android:padding="4dp"
                    android:textColor="@android:color/black"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textStyle="bold"/>
            <TextView
                    android:text="@string/time_800"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv800"
                    android:textAlignment="center"
                    android:padding="4dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"/>
            <TextView
                    android:text="@string/time_830"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv830"
                    android:textAlignment="center"
                    android:padding="4dp"
                    android:textColor="@android:color/black"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textStyle="bold"/>
            <TextView
                    android:text="@string/time_900"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv900"
                    android:textAlignment="center"
                    android:padding="4dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"/>
            <TextView
                    android:text="@string/time_930"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv930"
                    android:textAlignment="center"
                    android:padding="4dp"
                    android:textColor="@android:color/black"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textStyle="bold"/>
            <TextView
                    android:text="@string/time_1000"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv1000"
                    android:textAlignment="center"
                    android:padding="4dp"
                    android:textColor="@android:color/black"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textStyle="bold"/>
            <TextView
                    android:text="@string/time_1030"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv1030"
                    android:textAlignment="center"
                    android:padding="4dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"/>
            <TextView
                    android:text="@string/time_1100"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv1100"
                    android:textAlignment="center"
                    android:padding="4dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"/>
            <TextView
                    android:text="@string/time_1130"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv1130"
                    android:textAlignment="center"
                    android:padding="4dp"
                    android:textColor="@android:color/black"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textStyle="bold"/>
            <TextView
                    android:text="@string/time_1200"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv1200"
                    android:textAlignment="center"
                    android:padding="4dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"/>
            <TextView
                    android:text="@string/time_1230"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv1230"
                    android:textAlignment="center"
                    android:padding="4dp"
                    android:textColor="@android:color/black"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textStyle="bold"/>
            <TextView
                    android:text="@string/time_1300"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv1300"
                    android:textAlignment="center"
                    android:padding="4dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"/>
            <TextView
                    android:text="@string/time_1330"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv1330"
                    android:textAlignment="center"
                    android:padding="4dp"
                    android:textColor="@android:color/black"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textStyle="bold"/>
            <TextView
                    android:text="@string/time_1400"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv1400"
                    android:textAlignment="center"
                    android:padding="4dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"/>
            <TextView
                    android:text="@string/time_1430"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv1430"
                    android:textAlignment="center"
                    android:padding="4dp"
                    android:textColor="@android:color/black"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textStyle="bold"/>
            <TextView
                    android:text="@string/time_1530"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv1530"
                    android:textAlignment="center"
                    android:padding="4dp"
                    android:textColor="@android:color/black"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textStyle="bold"/>
            <TextView
                    android:text="@string/time_1500"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv1500"
                    android:textAlignment="center"
                    android:padding="4dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"/>
            <TextView
                    android:text="@string/time_1600"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv1600"
                    android:textAlignment="center"
                    android:padding="4dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"/>
            <TextView
                    android:text="@string/time_1630"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv1630"
                    android:textAlignment="center"
                    android:padding="4dp"
                    android:textColor="@android:color/black"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textStyle="bold"/>
            <TextView
                    android:text="@string/time_1700"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv1700"
                    android:textAlignment="center"
                    android:padding="4dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"/>
            <TextView
                    android:text="@string/time_1730"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv1730"
                    android:textAlignment="center"
                    android:padding="4dp"
                    android:textColor="@android:color/black"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textStyle="bold"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>